--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<div class="container">dgdg</div>
+<app-header-bar class="header"></app-header-bar>
+<app-hero
+  [title]="'Самая вкусная пицца в мире'"
+  [titleOrange]="'только в Pizza Cheff'"
+></app-hero>
