--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-header-bar class="header"></app-header-bar>
 <app-hero
+  class="hero"
   [title]="'Самая вкусная пицца в мире'"
   [titleOrange]="'только в Pizza Cheff'"
 ></app-hero>
+<app-card-list></app-card-list>
