--- a/src/app/shared/ui/hero/hero.component.scss
+++ b/src/app/shared/ui/hero/hero.component.scss
@@ -1,3 +1,7 @@
+:host {
+  display: block;
+}
+
 .hero {
   &-container {
     display: flex;
@@ -19,6 +23,10 @@
     &_orange {
       color: #ffaf18;
     }
+  }
+
+  app-button {
+    max-width: 224px;
   }
 
   &-offers-list {
