--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,4 @@
   [title]="'Самая вкусная пицца в мире'"
   [titleOrange]="'только в Pizza Cheff'"
 ></app-hero>
-<app-card-list></app-card-list>
+<router-outlet></router-outlet>
