--- a/src/app/pages/catalog/catalog.component.html
+++ b/src/app/pages/catalog/catalog.component.html
@@ -1,1 +1,12 @@
-<app-card-list></app-card-list>
+<ng-container *ngIf="!(isLoading$ | async); else loading">
+  <app-card-list
+    *ngIf="pizzaItems$ | async"
+    [items]="(pizzaItems$ | async)!"
+  ></app-card-list>
+</ng-container>
+
+<ng-template #loading>
+  <div class="container">
+    <h4>loading...</h4>
+  </div>
+</ng-template>
