--- a/src/app/shared/ui/card/card.component.scss
+++ b/src/app/shared/ui/card/card.component.scss
@@ -1,5 +1,5 @@
 :host {
-  display: block;
+  display: flex;
 }
 
 .card {
@@ -21,12 +21,14 @@
 
   &__description {
     margin: 0 0 20px 0;
+    text-align: center;
     font-size: 14px;
     line-height: 150%;
     color: #181a1a;
   }
 
   &__button {
+    margin-top: auto;
     width: 100%;
   }
 }
