--- a/src/app/pages/catalog/catalog.component.html
+++ b/src/app/pages/catalog/catalog.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="!(isLoading$ | async); else loading">
+<!-- <ng-container *ngIf="!(isLoading$ | async); else loading">
   <app-card-list
     *ngIf="pizzaItems$ | async"
     [items]="(pizzaItems$ | async)!"
@@ -9,4 +9,4 @@
   <div class="container">
     <h4>loading...</h4>
   </div>
-</ng-template>
+</ng-template> -->
