Маска для телефона

--- a/src/app/shared/ui/footer/components/footer-form/footer-form.component.html
+++ b/src/app/shared/ui/footer/components/footer-form/footer-form.component.html
@@ -17,6 +17,8 @@
     class="footer-form__field"
     placeholder="Телефон"
     formControlName="telephone"
+    mask="(000) 000-0000"
+    prefix="+7 "
   />
   <app-button [title]="'Оформить заказ'"></app-button>
 </form>
