Отправка формы и попапы

--- a/src/app/shared/ui/button/button.component.html
+++ b/src/app/shared/ui/button/button.component.html
@@ -1,3 +1,4 @@
 <button class="base-button" [disabled]="disabled" matRipple>
+  <mat-spinner class="base-button__loader" *ngIf="isLoading"></mat-spinner>
   <b>{{ title }}</b>
 </button>
