--- a/src/app/shared/ui/card-list/card-list.component.html
+++ b/src/app/shared/ui/card-list/card-list.component.html
@@ -1,6 +1,6 @@
 <section class="pizzas">
   <div class="container">
-    <h2 class="pizzas__title">Выберите свою любимую пиццуcd</h2>
+    <h2 class="pizzas__title">Выберите свою любимую пиццу</h2>
     <ul class="pizzas-list">
       <li class="pizzas-list__item" *ngFor="let item of items">
         <app-card
