--- a/src/app/shared/ui/button/button.component.scss
+++ b/src/app/shared/ui/button/button.component.scss
@@ -1,4 +1,7 @@
 .base-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 60px;
   padding: 10px;
@@ -13,5 +16,11 @@
     pointer-events: none;
     background-color: grey;
     cursor: default;
+  }
+
+  &__loader {
+    margin-right: 20px;
+    width: 20px !important;
+    height: 20px !important;
   }
 }
