Изображение пиццы в футере

--- a/src/app/shared/ui/footer/footer.component.html
+++ b/src/app/shared/ui/footer/footer.component.html
@@ -4,5 +4,10 @@
       <app-footer-info></app-footer-info>
       <app-footer-form></app-footer-form>
     </div>
+    <img
+      class="footer__image"
+      src="./assets/images/pizzzzza.png"
+      alt="Большая пицца"
+    />
   </div>
 </footer>
